deployments/burger-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: burger-webservice
  labels:
    run: burger-webapp
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: burger-webapp

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: burger-webapp
spec:
  selector:
    matchLabels:
      run: burger-webapp
  replicas: 1
  template:
    metadata:
      labels:
        run: burger-webapp
    spec:
      containers:
      - name: burger-webapp
        image: rakantonio/fastfood:burger
        ports:
        - containerPort: 80
